--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "start-dev": "nodemon server.js",
+    "start:dev": "NODE_ENV=development & nodemon server.js",
+    "start:prod": "NODE_ENV=production & node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "-- YOUR NAME HERE --",
